--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ hr{border:1px solid rgba(255,255,255,0.1);margin:20px 0;}
 #category-manager .category-item{display:flex;justify-content:space-between;align-items:center;background:#1a1a2e;padding:8px;border-radius:5px;margin-bottom:5px;}
 </style>
 </head>
+    <script src="https://pl28750759.effectivegatecpm.com/28/b7/77/28b7770062cf1401c510514ab77dccf2.js"></script>
 <body>
     <script>
   atOptions = {
